<resources>
    <string name="app_name">UserHunter</string>
    <string name="dev_name">Rosalyn Blanco</string>
    <string name="menu">Menu</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="search_users">Search Users</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="photo_description">User photo</string>
    <string name="add_user">New User</string>
    <string name="name">Name</string>
    <string name="job">Job</string>
</resources>
