<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp">

        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_user_placeholder"
            android:contentDescription="@string/photo_description"
            />
        <TextView
            android:id="@+id/tv_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/iv_photo"
            app:layout_constraintTop_toTopOf="@+id/iv_photo"/>
        <TextView
            android:id="@+id/tv_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/iv_photo"
            app:layout_constraintTop_toBottomOf="@+id/tv_first_name"/>
        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/iv_photo"
            app:layout_constraintTop_toBottomOf="@+id/tv_last_name"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>